# Arithmetic-Compiler

./: CMakeLists.txt  README.md
include/: assembly.h  parser.h  tokenizer.h
src/: assembly.c  main.c  parser.c  tokenizer.c
